# cpu-instructions-reader

./: Cargo.toml  README.md
src/: error.rs  instant.rs  instruction_number.rs  lib.rs
src/ffi/: ffi.c  mod.rs
